// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`MainSearch component should render 1`] = `
<DocumentFragment>
  <form
    aria-label="Main search"
    class="main-search"
  >
    <div
      class="main-search__input-container"
    >
      <input
        aria-label="Text query"
        type="search"
      />
    </div>
    <button
      class="button primary"
      type="submit"
    >
      Search
    </button>
  </form>
</DocumentFragment>
`;

exports[`MainSearch component should render with namespaces selector 1`] = `
<DocumentFragment>
  <form
    aria-label="Main search"
    class="main-search"
  >
    <div
      aria-expanded="false"
      aria-haspopup="true"
      class="dropdown"
    >
      <button
        class="button primary"
        style="--main-button-color: var(--fr--color-one, var(--fr--color-sea-blue));"
        type="button"
      >
        One
      </button>
    </div>
    <div
      class="main-search__input-container"
    >
      <input
        aria-label="Text query in one"
        type="search"
      />
    </div>
    <button
      class="button primary"
      type="submit"
    >
      Search
    </button>
  </form>
</DocumentFragment>
`;
